Fixed an issue with dragging. Started work on light theme.